# rg-search-gui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_rg_search_gui.bat
docs/: user-guide.md
docs/maintainers/: github-topics.md  release-template.md
docs/zh-TW/: README.md  rg-search-gui-spec.md  usage-guide.md
rg_search_gui/: __init__.py  __main__.py  engine_detection.py  installer_service.py  main.py  models.py  privacy_helpers.py  search_helpers.py  search_service.py  settings_service.py  ui.py
tests/: test_preview_themes.py  test_privacy_redaction.py  test_security_guards.py
